workspace = {members=["derive_from_env_proc"]}

[package]
name = "derive_from_env"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
description = "Extract type safe structured data from environment variables with procedural derive macros"
license = "MIT"
repository = "https://github.com/AntoineRenaud91/derive_from_env"
homepage = "https://github.com/AntoineRenaud91/derive_from_env"
keywords = ["environment", "env", "config", "derive", "macro"]
documentation = "https://docs.rs/derive_from_env"
categories = ["config"]
version = "0.1.4"
edition = "2021"

[dependencies]
derive_from_env_proc = {version = "0.1.4", path="derive_from_env_proc"}

[dev-dependencies]
temp-env = "0.3"
