[package]
name = "derive_from_env_proc"
authors = ["Antoine Renaud <antoine.renaud91@gmail.com>"]
description = "Extract type safe structured data from environment variables with procedural derive macros"
license = "MIT"
repository = "https://github.com/AntoineRenaud91/derive_from_env"
homepage = "https://github.com/AntoineRenaud91/derive_from_env"
keywords = []
documentation = "https://docs.rs/derive_from_env"
categories = ["config"]
version = "1.0.1"
edition = "2024"

[lib]
name = "derive_from_env_proc"
path = "src/lib.rs"
proc-macro = true

[dependencies]
quote = "1.0"
darling = "0.23"
proc-macro2 = "1.0"
syn = "2.0"
